# chemesis3

./: .mtn-ignore  Makefile.am  addressing.c  configure.ac  doxygen.cfg  history.txt  multi-scale.txt  object-list.txt  release-expand.config  solver.c  tests.config  timings.txt
chemesis3/: addressing.h  chemesis3.h  mathcomponent.h  service.h
glue/: Makefile.am
glue/swig/perl/: Chemesis3.pm  Makefile.am  chemesis3.i  chemesis3_test.pm
glue/swig/python/: Makefile.am  chemesis3.i  setup.py  uninstall.py
glue/swig/python/neurospaces/chemesis3/: __cbi__.py  __init__.py  components.py
install/rpm/: chemesis.spec  chemesis3.spec
integrators/: Makefile.am
integrators/chemesis3/neurospaces/: chemesis3.c  chemesis3.c~  chemesis3.h  chemesis3.h~  kinetics.c  kinetics.c~
python/: chemesis3.i
python/neurospaces/: __cbi__.py
python/neurospaces/chemesis3/: __cbi__.py  __init__.py
tests/: Makefile.am  tests.config
tests/code/: .gdbinit  Makefile.am  cal1.c  cal2-timing.c  cal2.c  main.c  main.h  version.c
tests/python/: cal1.py  cal1_api.py  cal1_components.py  cal1_ndf.py  cal2.py  import_test_1.py  pool_test.py  test_library.py
tests/specifications/: simple.t  version.t
tests/specifications/python/: import.t  simple.t
tests/specifications/strings/: cal1.txt  cal2.txt
